modification du front

--- a/index.html
+++ b/index.html
@@ -18,30 +18,33 @@
 	<h1>Frères ennemis</h1>
 </header>
 <main class="container">
-	
-	<div class="iframe-container">
-	<iframe id="video" src="https://www.youtube.com/embed/iQQ75Pa5mNI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	</div>
 
 <section>
-	
 	<article>
 		<img id="pict" src="img/affiche.jpg">
 		<h3>Synopsis</h3>
-		<p>Manuel et Driss ont grandi comme deux frères inséparables dans la même cité.
+		<p class="justify">Manuel et Driss ont grandi comme deux frères inséparables dans la même cité.
 		Mais aujourd'hui tout les oppose. Manuel est à la tête d'un traffic de drogue, alors que Driss est devenu flic.
 		Quand celui-ci est promu aux Stups, son retour bouleverse les équilibres et met Manuel en danger.</p>
 		<div class="clear"></div>
+	<div class="detail">
+		<p><strong>Date de sortie</strong>: <span id="sortie">3 Octobre 2018 (1h 51min)</span><br>
+		<strong>De</strong> <span id=author>David Oelhoffen</span><br>
+		<strong>Avec</strong> <span id="cast">Matthias Schoenaerts, Reda Kateb, Sabrina Ouazani</span><br>
+		<strong>Genre</strong> <span id="theme">Policier</span><br>
+		<strong>Distributeur</strong> <span id="distri">Bac Films</span><br>
+		<strong>Récompenses</strong> <span id="award">2 nominations</span></p>
+	</div>
 	</article>
+</section>
+<section>
+	<div class="iframe-container">
+	<iframe id="video" src="https://www.youtube.com/embed/iQQ75Pa5mNI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</div>
+</section>
+<section class="icons">
+	
 	<article>
-		<p><strong>Date de sortie</strong>: <span id="sortie">3 Octobre 2018 (1h 51min)</span></p>
-		<p><strong>De</strong> <span id=author>David Oelhoffen</span></p>
-		<p><strong>Avec</strong> <span id="cast">Matthias Schoenaerts, Reda Kateb, Sabrina Ouazani</span></p>
-		<p><strong>Genre</strong> <span id="theme">Policier</span></p>
-		<p><strong>Distributeur</strong> <span id="distri">Bac Films</span></p>
-		<p><strong>Récompenses</strong> <span id="award">2 nominations</span></p>
-	</article>
-	<article class="icons">
 		<a href="#"><img src="img/facebook.png"></i></a>
 		<a href="#"><img src="img/twiter.png"></a>
 		<a href="#"><img src="img/insta.png"></a>
@@ -49,7 +52,8 @@
 
 </section>
 
-<section>
+<section class="bas">
+	
 	<h3>Réserver mon Billet / Scéances</h3>
 	<div>
 		<!--<p style="margin-bottom: 150px;">Service Non Disponible..</p>-->
@@ -66,33 +70,33 @@
 		</div>
 		<div class="hour-info">
 			<ul class="days">
-				<li class="blue">
-					<span>Mar</span>
-					<span>18</span>
+				<li id="date-1" data-date="" class="blue">
+					<span class="s1">Mar</span>
+					<span class="s2">18</span>
 				</li>
-				<li>
-					<span>Mer</span>
-					<span>19</span>
+				<li id="date-2" data-date="">
+					<span class="s1">Mer</span>
+					<span class="s2">19</span>
 				</li>
-				<li>
-					<span>Jeu</span>
-					<span>20</span>
+				<li id="date-3" data-date="">
+					<span class="s1">Jeu</span>
+					<span class="s2">20</span>
 				</li>
-				<li>
-					<span>Ven</span>
-					<span>21</span>
+				<li id="date-4" data-date="">
+					<span class="s1">Ven</span>
+					<span class="s2">21</span>
 				</li>
-				<li>
-					<span>Sam</span>
-					<span>22</span>
+				<li id="date-5" data-date="">
+					<span class="s1">Sam</span>
+					<span class="s2">22</span>
 				</li>
-				<li>
-					<span>Dim</span>
-					<span>23</span>
+				<li id="date-6" data-date="">
+					<span class="s1">Dim</span>
+					<span class="s2">23</span>
 				</li>
-				<li>
-					<span>Dim</span>
-					<span>23</span>
+				<li id="date-7" data-date="">
+					<span class="s1">Lun</span>
+					<span class="s2">24</span>
 				</li>
 			</ul>
 			<p>En VO :</p>
