--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-P4VZ523');</script>
+	<!-- End Google Tag Manager -->
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4VZ523"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager -->
 </head>
 <body>
 
@@ -45,9 +56,9 @@
 <section class="icons">
 	
 	<article>
-		<a href="#"><img src="img/facebook.png"></i></a>
-		<a href="#"><img src="img/twiter.png"></a>
-		<a href="#"><img src="img/insta.png"></a>
+		<a href="https://www.facebook.com/bacfilms/"><img src="img/facebook.png"></i></a>
+		<a href="https://mobile.twitter.com/bac_films?lang=fr"><img src="img/twiter.png"></a>
+		<a href="https://mobile.twitter.com/bac_films?lang=fr"><img src="img/insta.png"></a>
 	</article>
 
 </section>
@@ -58,7 +69,7 @@
 	<div>
 		<!--<p style="margin-bottom: 150px;">Service Non Disponible..</p>-->
 	</div>
-	<div class="calendar">
+	<div class="calendar calendar-0">
 		<div class="info-ciné">
 			<div class="zip">
 				<p >75001</p>
